# Ludo

./: README.md
CS-211 Final Project/: CMakeLists.txt  PROPOSAL.md
CS-211 Final Project/src/: controller.cxx  controller.hxx  main.cxx  model.cxx  model.hxx  view.cxx  view.hxx
CS-211 Final Project/test/: model_test.cxx
